--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.dakusui</groupId>
     <artifactId>floorplan</artifactId>
-    <version>2.0.3</version>
+    <version>2.0.3-SNAPSHOT</version>
     <description>A library to model a heterogeneous and distributed software system for testing</description>
     
     <name>floorplan</name>
@@ -23,7 +23,7 @@
         <developerConnection>scm:git:git@github.com:dakusui/floorplan.git
         </developerConnection>
         <url>http://dakusui.github.io/floorplan</url>
-        <tag>floorplan-2.0.3</tag>
+        <tag>floorplan-2.0.x</tag>
     </scm>
 
     <developers>
