--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.dakusui</groupId>
     <artifactId>floorplan</artifactId>
     <version>2.0.5-SNAPSHOT</version>
-    <description>A library to model a heterogeneous and distributed software system for testing</description>
-    
+    <description>A library to model a heterogeneous and distributed software
+        system for testing
+    </description>
+
     <name>floorplan</name>
     <url>https://github.com/dakusui/floorplan</url>
 
@@ -49,9 +53,20 @@
         </dependency>
         <dependency>
             <groupId>com.github.dakusui</groupId>
+            <artifactId>thincrest</artifactId>
+            <version>3.1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.dakusui</groupId>
             <artifactId>jcunit</artifactId>
             <version>0.8.16</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.github.dakusui</groupId>
+                    <artifactId>thincrest</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.dakusui</groupId>
