--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.dakusui</groupId>
     <artifactId>floorplan</artifactId>
-    <version>3.1.1-SNAPSHOT</version>
+    <version>3.1.1</version>
     <description>A library to model a heterogeneous and distributed software
         system for testing
     </description>
@@ -25,7 +25,7 @@
         <developerConnection>scm:git:git@github.com:dakusui/floorplan.git
         </developerConnection>
         <url>http://dakusui.github.io/floorplan</url>
-        <tag>floorplan-2.3.x</tag>
+        <tag>3.2.0</tag>
     </scm>
 
     <developers>
