--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
         </dependency>
         <dependency>
             <groupId>com.github.dakusui</groupId>
+            <artifactId>osynth</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.dakusui</groupId>
             <artifactId>actionunit</artifactId>
             <version>5.1.2</version>
         </dependency>
