--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.dakusui</groupId>
     <artifactId>floorplan</artifactId>
-    <version>5.0.5-SNAPSHOT</version>
+    <version>5.1.0-SNAPSHOT</version>
     <description>A library to model a heterogeneous and distributed software
         system for testing
     </description>
@@ -25,7 +25,7 @@
         <developerConnection>scm:git:git@github.com:dakusui/floorplan.git
         </developerConnection>
         <url>http://dakusui.github.io/floorplan</url>
-        <tag>floorplan-5.0.x</tag>
+        <tag>floorplan-5.1.x</tag>
     </scm>
 
     <developers>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.github.dakusui</groupId>
             <artifactId>osynth</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.dakusui</groupId>
