--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.github.dakusui</groupId>
             <artifactId>osynth</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.github.dakusui</groupId>
